--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1093,7 +1093,7 @@ section.lazy-placeholder:after {
 }
 .cid-rSMUahiG2z {
   padding-top: 120px;
-  padding-bottom: 60px;
+  padding-bottom: 120px;
   background-color: #ffffff;
 }
 .cid-rSMUahiG2z .testimonial-text {
@@ -1124,7 +1124,7 @@ section.lazy-placeholder:after {
   color: #232323;
 }
 .cid-rSOGLYfvPd {
-  padding-top: 0px;
+  padding-top: 30px;
   padding-bottom: 60px;
   background-color: #ffffff;
 }
@@ -1355,6 +1355,284 @@ section.lazy-placeholder:after {
 }
 .cid-rSQ5vdOQXz .card-wrapper {
   height: 100%;
+}
+.cid-rT5VFis8Tr {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-rT5VFis8Tr .content-slider {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-rT5VFis8Tr .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rT5VFis8Tr .modal-body .close span {
+  font-style: normal;
+}
+.cid-rT5VFis8Tr .carousel-inner > .active,
+.cid-rT5VFis8Tr .carousel-inner > .next,
+.cid-rT5VFis8Tr .carousel-inner > .prev {
+  display: -webkit-flex;
+}
+.cid-rT5VFis8Tr .carousel-control .icon-next,
+.cid-rT5VFis8Tr .carousel-control .icon-prev {
+  margin-top: -18px;
+  font-size: 40px;
+  line-height: 27px;
+}
+.cid-rT5VFis8Tr .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rT5VFis8Tr .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-rT5VFis8Tr .content-slider-wrap {
+    width: 100%!important;
+  }
+}
+.cid-rT5VFis8Tr .boxed-slider {
+  position: relative;
+  padding: 93px 0;
+}
+.cid-rT5VFis8Tr .boxed-slider > div {
+  position: relative;
+}
+.cid-rT5VFis8Tr .container img {
+  width: 100%;
+}
+.cid-rT5VFis8Tr .container img + .row {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 2;
+}
+.cid-rT5VFis8Tr .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-rT5VFis8Tr .mbr-table-cell {
+  padding: 0;
+}
+.cid-rT5VFis8Tr .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-rT5VFis8Tr .carousel-caption {
+  top: 50%;
+  right: 0;
+  bottom: auto;
+  left: 0;
+  display: -webkit-flex;
+  align-items: center;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-align-items: center;
+}
+.cid-rT5VFis8Tr .mbr-overlay {
+  z-index: 1;
+}
+.cid-rT5VFis8Tr .container-slide.container {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-rT5VFis8Tr .carousel-item {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -o-transition: -o-transform 0.6s ease-in-out;
+  -webkit-transition: -webkit-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+}
+@media (max-width: 576px) {
+  .cid-rT5VFis8Tr .carousel-item .container {
+    width: 100%;
+  }
+}
+.cid-rT5VFis8Tr .carousel-item-next.carousel-item-left,
+.cid-rT5VFis8Tr .carousel-item-prev.carousel-item-right {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.cid-rT5VFis8Tr .active.carousel-item-right,
+.cid-rT5VFis8Tr .carousel-item-next {
+  -webkit-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
+}
+.cid-rT5VFis8Tr .active.carousel-item-left,
+.cid-rT5VFis8Tr .carousel-item-prev {
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+}
+.cid-rT5VFis8Tr .mbr-slider .carousel-control {
+  top: 50%;
+  width: 50px;
+  height: 50px;
+  margin-top: -1.5rem;
+  font-size: 35px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all .3s;
+}
+.cid-rT5VFis8Tr .mbr-slider .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rT5VFis8Tr .mbr-slider .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rT5VFis8Tr .mbr-slider .carousel-control .mbr-iconfont {
+  font-size: 1.5rem;
+}
+@media (max-width: 767px) {
+  .cid-rT5VFis8Tr .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-rT5VFis8Tr .mbr-slider .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-rT5VFis8Tr .mbr-slider .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: .5;
+  transition: all .3s;
+}
+.cid-rT5VFis8Tr .mbr-slider .carousel-indicators li.active,
+.cid-rT5VFis8Tr .mbr-slider .carousel-indicators li:hover {
+  opacity: .9;
+}
+.cid-rT5VFis8Tr .mbr-slider .carousel-indicators li::after,
+.cid-rT5VFis8Tr .mbr-slider .carousel-indicators li::before {
+  content: none;
+}
+.cid-rT5VFis8Tr .mbr-slider .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 576px) {
+  .cid-rT5VFis8Tr .mbr-slider .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-rT5VFis8Tr .mbr-slider > .container img {
+  width: 100%;
+}
+.cid-rT5VFis8Tr .mbr-slider > .container img + .row {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  -moz-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.cid-rT5VFis8Tr .mbr-slider > .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+@media (max-width: 576px) {
+  .cid-rT5VFis8Tr .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-rT5VFis8Tr .mbr-slider .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-rT5VFis8Tr .mbr-slider .mbr-table-cell {
+  padding: 0;
+}
+.cid-rT5VFis8Tr .carousel-item .container.container-slide {
+  position: initial;
+  width: auto;
+  min-height: 0;
+}
+.cid-rT5VFis8Tr .full-screen .slider-fullscreen-image {
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+.cid-rT5VFis8Tr .full-screen .slider-fullscreen-image.active {
+  display: -o-flex;
+}
+.cid-rT5VFis8Tr .full-screen .container {
+  width: auto;
+  padding-right: 0;
+  padding-left: 0;
+}
+.cid-rT5VFis8Tr .full-screen .carousel-item .container.container-slide {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-rT5VFis8Tr .full-screen .carousel-item .container.container-slide img {
+  display: none;
+}
+.cid-rT5VFis8Tr .mbr-background-video-preview {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.cid-rT5VFis8Tr .mbr-overlay ~ .container-slide {
+  z-index: auto;
+}
+.cid-rT5VFis8Tr .mbr-slider.slide .container {
+  overflow: hidden;
+  padding: 0;
+}
+.cid-rT5VFis8Tr .carousel-inner {
+  height: 100%;
+}
+.cid-rT5VFis8Tr .slider-fullscreen-image {
+  height: 100%;
+  background: transparent !important;
+}
+.cid-rT5VFis8Tr .image_wrapper {
+  height: 400px;
+  width: 100%;
+  position: relative;
+  display: inline-block;
+}
+.cid-rT5VFis8Tr .image_wrapper img {
+  width: auto !important;
+  height: 100%;
+}
+.cid-rT5VFis8Tr .carousel-item .container-slide {
+  text-align: center;
+}
+.cid-rT5VFis8Tr .content-slider-wrap {
+  width: 60%;
 }
 .cid-rSOYB7fiUQ {
   padding-top: 60px;
