--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1356,57 +1356,57 @@ section.lazy-placeholder:after {
 .cid-rSQ5vdOQXz .card-wrapper {
   height: 100%;
 }
-.cid-rT5VFis8Tr {
+.cid-rTJVPnd0oG {
   padding-top: 45px;
   padding-bottom: 45px;
   background-color: #ffffff;
 }
-.cid-rT5VFis8Tr .content-slider {
+.cid-rTJVPnd0oG .content-slider {
   display: -webkit-flex;
   justify-content: center;
   -webkit-justify-content: center;
 }
-.cid-rT5VFis8Tr .modal-body .close {
+.cid-rTJVPnd0oG .modal-body .close {
   background: #1b1b1b;
 }
-.cid-rT5VFis8Tr .modal-body .close span {
+.cid-rTJVPnd0oG .modal-body .close span {
   font-style: normal;
 }
-.cid-rT5VFis8Tr .carousel-inner > .active,
-.cid-rT5VFis8Tr .carousel-inner > .next,
-.cid-rT5VFis8Tr .carousel-inner > .prev {
+.cid-rTJVPnd0oG .carousel-inner > .active,
+.cid-rTJVPnd0oG .carousel-inner > .next,
+.cid-rTJVPnd0oG .carousel-inner > .prev {
   display: -webkit-flex;
 }
-.cid-rT5VFis8Tr .carousel-control .icon-next,
-.cid-rT5VFis8Tr .carousel-control .icon-prev {
+.cid-rTJVPnd0oG .carousel-control .icon-next,
+.cid-rTJVPnd0oG .carousel-control .icon-prev {
   margin-top: -18px;
   font-size: 40px;
   line-height: 27px;
 }
-.cid-rT5VFis8Tr .carousel-control:hover {
+.cid-rTJVPnd0oG .carousel-control:hover {
   background: #1b1b1b;
   color: #fff;
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rT5VFis8Tr .container .carousel-control {
+  .cid-rTJVPnd0oG .container .carousel-control {
     margin-bottom: 0;
   }
-  .cid-rT5VFis8Tr .content-slider-wrap {
+  .cid-rTJVPnd0oG .content-slider-wrap {
     width: 100%!important;
   }
 }
-.cid-rT5VFis8Tr .boxed-slider {
+.cid-rTJVPnd0oG .boxed-slider {
   position: relative;
   padding: 93px 0;
 }
-.cid-rT5VFis8Tr .boxed-slider > div {
+.cid-rTJVPnd0oG .boxed-slider > div {
   position: relative;
 }
-.cid-rT5VFis8Tr .container img {
+.cid-rTJVPnd0oG .container img {
   width: 100%;
 }
-.cid-rT5VFis8Tr .container img + .row {
+.cid-rTJVPnd0oG .container img + .row {
   position: absolute;
   top: 50%;
   left: 0;
@@ -1416,17 +1416,17 @@ section.lazy-placeholder:after {
   transform: translateY(-50%);
   z-index: 2;
 }
-.cid-rT5VFis8Tr .mbr-section {
+.cid-rTJVPnd0oG .mbr-section {
   padding: 0;
   background-attachment: scroll;
 }
-.cid-rT5VFis8Tr .mbr-table-cell {
+.cid-rTJVPnd0oG .mbr-table-cell {
   padding: 0;
 }
-.cid-rT5VFis8Tr .container .carousel-indicators {
+.cid-rTJVPnd0oG .container .carousel-indicators {
   margin-bottom: 3px;
 }
-.cid-rT5VFis8Tr .carousel-caption {
+.cid-rTJVPnd0oG .carousel-caption {
   top: 50%;
   right: 0;
   bottom: auto;
@@ -1437,15 +1437,15 @@ section.lazy-placeholder:after {
   transform: translateY(-50%);
   -webkit-align-items: center;
 }
-.cid-rT5VFis8Tr .mbr-overlay {
+.cid-rTJVPnd0oG .mbr-overlay {
   z-index: 1;
 }
-.cid-rT5VFis8Tr .container-slide.container {
+.cid-rTJVPnd0oG .container-slide.container {
   width: 100%;
   min-height: 100vh;
   padding: 0;
 }
-.cid-rT5VFis8Tr .carousel-item {
+.cid-rTJVPnd0oG .carousel-item {
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -1458,26 +1458,26 @@ section.lazy-placeholder:after {
   perspective: 1000px;
 }
 @media (max-width: 576px) {
-  .cid-rT5VFis8Tr .carousel-item .container {
+  .cid-rTJVPnd0oG .carousel-item .container {
     width: 100%;
   }
 }
-.cid-rT5VFis8Tr .carousel-item-next.carousel-item-left,
-.cid-rT5VFis8Tr .carousel-item-prev.carousel-item-right {
+.cid-rTJVPnd0oG .carousel-item-next.carousel-item-left,
+.cid-rTJVPnd0oG .carousel-item-prev.carousel-item-right {
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
-.cid-rT5VFis8Tr .active.carousel-item-right,
-.cid-rT5VFis8Tr .carousel-item-next {
+.cid-rTJVPnd0oG .active.carousel-item-right,
+.cid-rTJVPnd0oG .carousel-item-next {
   -webkit-transform: translate3d(100%, 0, 0);
   transform: translate3d(100%, 0, 0);
 }
-.cid-rT5VFis8Tr .active.carousel-item-left,
-.cid-rT5VFis8Tr .carousel-item-prev {
+.cid-rTJVPnd0oG .active.carousel-item-left,
+.cid-rTJVPnd0oG .carousel-item-prev {
   -webkit-transform: translate3d(-100%, 0, 0);
   transform: translate3d(-100%, 0, 0);
 }
-.cid-rT5VFis8Tr .mbr-slider .carousel-control {
+.cid-rTJVPnd0oG .mbr-slider .carousel-control {
   top: 50%;
   width: 50px;
   height: 50px;
@@ -1488,29 +1488,29 @@ section.lazy-placeholder:after {
   border-radius: 50%;
   transition: all .3s;
 }
-.cid-rT5VFis8Tr .mbr-slider .carousel-control.carousel-control-prev {
+.cid-rTJVPnd0oG .mbr-slider .carousel-control.carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-rT5VFis8Tr .mbr-slider .carousel-control.carousel-control-next {
+.cid-rTJVPnd0oG .mbr-slider .carousel-control.carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
-.cid-rT5VFis8Tr .mbr-slider .carousel-control .mbr-iconfont {
+.cid-rTJVPnd0oG .mbr-slider .carousel-control .mbr-iconfont {
   font-size: 1.5rem;
 }
 @media (max-width: 767px) {
-  .cid-rT5VFis8Tr .mbr-slider .carousel-control {
+  .cid-rTJVPnd0oG .mbr-slider .carousel-control {
     top: auto;
     bottom: 1rem;
   }
 }
-.cid-rT5VFis8Tr .mbr-slider .carousel-indicators {
+.cid-rTJVPnd0oG .mbr-slider .carousel-indicators {
   position: absolute;
   bottom: 0;
   margin-bottom: 1.5rem !important;
 }
-.cid-rT5VFis8Tr .mbr-slider .carousel-indicators li {
+.cid-rTJVPnd0oG .mbr-slider .carousel-indicators li {
   max-width: 15px;
   height: 15px;
   width: 15px;
@@ -1522,15 +1522,15 @@ section.lazy-placeholder:after {
   opacity: .5;
   transition: all .3s;
 }
-.cid-rT5VFis8Tr .mbr-slider .carousel-indicators li.active,
-.cid-rT5VFis8Tr .mbr-slider .carousel-indicators li:hover {
+.cid-rTJVPnd0oG .mbr-slider .carousel-indicators li.active,
+.cid-rTJVPnd0oG .mbr-slider .carousel-indicators li:hover {
   opacity: .9;
 }
-.cid-rT5VFis8Tr .mbr-slider .carousel-indicators li::after,
-.cid-rT5VFis8Tr .mbr-slider .carousel-indicators li::before {
+.cid-rTJVPnd0oG .mbr-slider .carousel-indicators li::after,
+.cid-rTJVPnd0oG .mbr-slider .carousel-indicators li::before {
   content: none;
 }
-.cid-rT5VFis8Tr .mbr-slider .carousel-indicators.ie-fix {
+.cid-rTJVPnd0oG .mbr-slider .carousel-indicators.ie-fix {
   left: 50%;
   display: block;
   width: 60%;
@@ -1538,14 +1538,14 @@ section.lazy-placeholder:after {
   text-align: center;
 }
 @media (max-width: 576px) {
-  .cid-rT5VFis8Tr .mbr-slider .carousel-indicators {
+  .cid-rTJVPnd0oG .mbr-slider .carousel-indicators {
     display: none !important;
   }
 }
-.cid-rT5VFis8Tr .mbr-slider > .container img {
+.cid-rTJVPnd0oG .mbr-slider > .container img {
   width: 100%;
 }
-.cid-rT5VFis8Tr .mbr-slider > .container img + .row {
+.cid-rTJVPnd0oG .mbr-slider > .container img + .row {
   position: absolute;
   top: 50%;
   right: 0;
@@ -1555,114 +1555,87 @@ section.lazy-placeholder:after {
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 }
-.cid-rT5VFis8Tr .mbr-slider > .container .carousel-indicators {
+.cid-rTJVPnd0oG .mbr-slider > .container .carousel-indicators {
   margin-bottom: 3px;
 }
 @media (max-width: 576px) {
-  .cid-rT5VFis8Tr .mbr-slider > .container .carousel-control {
+  .cid-rTJVPnd0oG .mbr-slider > .container .carousel-control {
     margin-bottom: 0;
   }
 }
-.cid-rT5VFis8Tr .mbr-slider .mbr-section {
+.cid-rTJVPnd0oG .mbr-slider .mbr-section {
   padding: 0;
   background-attachment: scroll;
 }
-.cid-rT5VFis8Tr .mbr-slider .mbr-table-cell {
+.cid-rTJVPnd0oG .mbr-slider .mbr-table-cell {
   padding: 0;
 }
-.cid-rT5VFis8Tr .carousel-item .container.container-slide {
+.cid-rTJVPnd0oG .carousel-item .container.container-slide {
   position: initial;
   width: auto;
   min-height: 0;
 }
-.cid-rT5VFis8Tr .full-screen .slider-fullscreen-image {
+.cid-rTJVPnd0oG .full-screen .slider-fullscreen-image {
   min-height: 100vh;
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
 }
-.cid-rT5VFis8Tr .full-screen .slider-fullscreen-image.active {
+.cid-rTJVPnd0oG .full-screen .slider-fullscreen-image.active {
   display: -o-flex;
 }
-.cid-rT5VFis8Tr .full-screen .container {
+.cid-rTJVPnd0oG .full-screen .container {
   width: auto;
   padding-right: 0;
   padding-left: 0;
 }
-.cid-rT5VFis8Tr .full-screen .carousel-item .container.container-slide {
+.cid-rTJVPnd0oG .full-screen .carousel-item .container.container-slide {
   width: 100%;
   min-height: 100vh;
   padding: 0;
 }
-.cid-rT5VFis8Tr .full-screen .carousel-item .container.container-slide img {
+.cid-rTJVPnd0oG .full-screen .carousel-item .container.container-slide img {
   display: none;
 }
-.cid-rT5VFis8Tr .mbr-background-video-preview {
+.cid-rTJVPnd0oG .mbr-background-video-preview {
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
 }
-.cid-rT5VFis8Tr .mbr-overlay ~ .container-slide {
+.cid-rTJVPnd0oG .mbr-overlay ~ .container-slide {
   z-index: auto;
 }
-.cid-rT5VFis8Tr .mbr-slider.slide .container {
+.cid-rTJVPnd0oG .mbr-slider.slide .container {
   overflow: hidden;
   padding: 0;
 }
-.cid-rT5VFis8Tr .carousel-inner {
+.cid-rTJVPnd0oG .carousel-inner {
   height: 100%;
 }
-.cid-rT5VFis8Tr .slider-fullscreen-image {
+.cid-rTJVPnd0oG .slider-fullscreen-image {
   height: 100%;
   background: transparent !important;
 }
-.cid-rT5VFis8Tr .image_wrapper {
+.cid-rTJVPnd0oG .image_wrapper {
   height: 400px;
   width: 100%;
   position: relative;
   display: inline-block;
 }
-.cid-rT5VFis8Tr .image_wrapper img {
+.cid-rTJVPnd0oG .image_wrapper img {
   width: auto !important;
   height: 100%;
 }
-.cid-rT5VFis8Tr .carousel-item .container-slide {
+.cid-rTJVPnd0oG .carousel-item .container-slide {
   text-align: center;
 }
-.cid-rT5VFis8Tr .content-slider-wrap {
+.cid-rTJVPnd0oG .content-slider-wrap {
   width: 60%;
 }
-.cid-rSOYB7fiUQ {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-rSOYB7fiUQ .mbr-text,
-.cid-rSOYB7fiUQ blockquote {
-  color: #767676;
-}
-.cid-rSQxVbbvat {
-  background: #ffffff;
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-.cid-rSQxVbbvat .image-block {
-  margin: auto;
-}
-.cid-rSQxVbbvat figcaption {
-  position: relative;
-}
-.cid-rSQxVbbvat figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-rSQxVbbvat .image-block {
-    width: 100% !important;
-  }
+.cid-rTJVPnd0oG P {
+  color: #ffffff;
 }
 .cid-rSQtMIlWNj {
   padding-top: 60px;
