--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3,7 +3,6 @@
 
 
 
-
 body {
   font-family: Rubik;
 }
@@ -16,7 +15,7 @@ body {
   font-size: 6.8rem;
 }
 .display-2 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Oswald-Stencil';
   font-size: 2.2rem;
   font-display: swap;
 }
@@ -1093,7 +1092,7 @@ section.lazy-placeholder:after {
 }
 .cid-rSMUahiG2z {
   padding-top: 120px;
-  padding-bottom: 120px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
 .cid-rSMUahiG2z .testimonial-text {
@@ -1122,6 +1121,58 @@ section.lazy-placeholder:after {
 }
 .cid-rSMUahiG2z .mbr-author-desc {
   color: #232323;
+}
+.cid-rSOGLYfvPd {
+  padding-top: 30px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rSOGLYfvPd .mbr-section-subtitle {
+  color: #767676;
+  text-align: center;
+  font-weight: 300;
+}
+.cid-rSOGLYfvPd .step {
+  width: 72px;
+  height: 72px;
+  font-size: 36px;
+  border-radius: 50%;
+  border: 2px solid #efefef;
+  padding-bottom: 0;
+}
+@media (min-width: 768px) {
+  .cid-rSOGLYfvPd .separline .step-wrapper {
+    position: relative;
+  }
+  .cid-rSOGLYfvPd .separline .step-wrapper:before,
+  .cid-rSOGLYfvPd .separline .step-wrapper:after {
+    top: 38px;
+    position: absolute;
+    content: "";
+    height: 2px;
+    width: calc(50% + 15px - 36px - 8px);
+    background-color: #efefef;
+  }
+  .cid-rSOGLYfvPd .separline .step-wrapper:before {
+    left: -15px;
+  }
+  .cid-rSOGLYfvPd .separline .step-wrapper:after {
+    left: calc(50% + 8px + 36px);
+  }
+  .cid-rSOGLYfvPd .separline.last-child .step-wrapper:after,
+  .cid-rSOGLYfvPd .separline:nth-child(3n) .step-wrapper:after,
+  .cid-rSOGLYfvPd .separline:nth-child(3n+1) .step-wrapper:before {
+    background: none;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rSOGLYfvPd .card:not(.last-child) {
+    padding-bottom: 1.5rem;
+  }
+}
+.cid-rSOGLYfvPd .mbr-section-title {
+  color: #0f7699;
+  text-align: center;
 }
 .cid-rSOWUtnO0u {
   padding-top: 60px;
@@ -1260,58 +1311,6 @@ section.lazy-placeholder:after {
     padding: 15px;
     -webkit-flex: 0 0 20%;
   }
-}
-.cid-rSOGLYfvPd {
-  padding-top: 30px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-rSOGLYfvPd .mbr-section-subtitle {
-  color: #767676;
-  text-align: center;
-  font-weight: 300;
-}
-.cid-rSOGLYfvPd .step {
-  width: 72px;
-  height: 72px;
-  font-size: 36px;
-  border-radius: 50%;
-  border: 2px solid #efefef;
-  padding-bottom: 0;
-}
-@media (min-width: 768px) {
-  .cid-rSOGLYfvPd .separline .step-wrapper {
-    position: relative;
-  }
-  .cid-rSOGLYfvPd .separline .step-wrapper:before,
-  .cid-rSOGLYfvPd .separline .step-wrapper:after {
-    top: 38px;
-    position: absolute;
-    content: "";
-    height: 2px;
-    width: calc(50% + 15px - 36px - 8px);
-    background-color: #efefef;
-  }
-  .cid-rSOGLYfvPd .separline .step-wrapper:before {
-    left: -15px;
-  }
-  .cid-rSOGLYfvPd .separline .step-wrapper:after {
-    left: calc(50% + 8px + 36px);
-  }
-  .cid-rSOGLYfvPd .separline.last-child .step-wrapper:after,
-  .cid-rSOGLYfvPd .separline:nth-child(3n) .step-wrapper:after,
-  .cid-rSOGLYfvPd .separline:nth-child(3n+1) .step-wrapper:before {
-    background: none;
-  }
-}
-@media (max-width: 767px) {
-  .cid-rSOGLYfvPd .card:not(.last-child) {
-    padding-bottom: 1.5rem;
-  }
-}
-.cid-rSOGLYfvPd .mbr-section-title {
-  color: #232323;
-  text-align: center;
 }
 .cid-rSOWJgEnmH {
   padding-top: 60px;
